# LnkFileInfo

./: .gitignore  LICENSE  README.md  lnkfileinfo.hpp
unittest/: CMakeLists.txt  unittest.cpp
unittest/TestLnkFiles/: BasicLnkFile.lnk  DirectoryLnkFile.lnk  EmojiLnkFile.lnk  EmojiNetworkDriveLnkFile.lnk  NetworkDriveLnkFile.lnk  UsbLnkFile.lnk  ÅÄÖLnkFile.lnk  😊LnkFile.lnk  😊NetworkDriveLnkFile.lnk
